Fix a bug related to dog#show details-bar not displaying properly on Safari

--- a/app/assets/stylesheets/application.sass.scss
+++ b/app/assets/stylesheets/application.sass.scss
@@ -96,6 +96,11 @@ body::before {
         height: 60px;
         display: flex;
         justify-content: center;
+        
+        .avatar {
+          max-height: 100%;
+          height: 60px;
+        }
       }
 
       .details {
@@ -135,7 +140,8 @@ body::before {
     position: fixed;
     margin: 0px auto;
     top: 10px;
-    background: white;
+    background: rgb(255, 255, 255);
+    color: black;
     border: 1px black inset;
     display: flex;
     z-index: 998;
@@ -156,8 +162,14 @@ body::before {
         flex: 1;
         height: 75px;
         max-height: 100%;
+        width: auto;
         display: flex;
         justify-content: center;
+
+        .avatar {
+          max-height: 100%;
+          height: 75px;
+        }
       }
 
       .details {
@@ -170,8 +182,7 @@ body::before {
           font-weight: bold;
           padding: 2px 5px;
         }
-      }
-      
+      }      
     }
 
     form {
